Add next button

--- a/HelloWorldApp/app/build.gradle
+++ b/HelloWorldApp/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     implementation 'org.pytorch:pytorch_android:1.8.0'
     implementation 'org.pytorch:pytorch_android_torchvision:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
