--- a/HelloWorldApp/app/build.gradle
+++ b/HelloWorldApp/app/build.gradle
@@ -41,4 +41,6 @@ dependencies {
 
     implementation 'org.pytorch:pytorch_android:1.8.0'
     implementation 'org.pytorch:pytorch_android_torchvision:1.8.0'
+
+    implementation "androidx.exifinterface:exifinterface:1.3.1"
 }
